--- a/My_Site.csproj
+++ b/My_Site.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MudBlazor" Version="6.1.8" />
+    <PackageReference Include="Octokit" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
